# NiclaSenseME

./: .gitignore  README.md
app/: ble.js  index.html  main.js  package-lock.json  package.json  renderer.js
app/pages/: fw.html  op_selector.html  sensor_setup.html
nicla_basic/: CMakeLists.txt  Kconfig  README.md  arduino_nicla_sense_me.overlay  nicla_basic.code-workspace  pm.yml  pm_static.yml  prj.conf
nicla_basic/child_image/: README.md  mcuboot.conf  mcuboot.overlay  sentinel_rsa-2048.pem
nicla_basic/ext_lib/BLE/: NiclaService.cpp  NiclaService.hpp
nicla_basic/host_src/: ble_fw_transfer.py
nicla_basic/host_src/firmware/: fw.h
nicla_basic/host_src/firmware/nRF52/: nicla_fw.h
nicla_basic/src/: main.cpp  nicla_basic.code-workspace
nicla_basic/test/old/: merged.hex
